--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ body {
     font-size: 14px;
     padding-top: 36px;
     background-color: #f0f0f8;
+    text-align: center;
 }
 
 .heading {
@@ -40,7 +41,16 @@ h1 {
 }
 
 main {
-    text-align: center;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.disclaimer {
+    margin-bottom: 30px;
+}
+
+.disclaimer-heading {
+    font-weight: 600;
 }
 
 .table-container {
@@ -87,6 +97,13 @@ td:nth-child(1) {
             <h1>Victoria Pfizer vaccine availability</h1>
         </div>
         <main>
+            <div class="disclaimer">
+                <p class="disclaimer-heading">Disclaimers</p>
+                <p>Pfizer vaccine availability via https://portal.cvms.vic.gov.au/ based on age eligibility. Updated every few minutes.</p>
+                <p>This site is not associated with the Victorian Government in any way, just a guy who writes code for a living.</p>
+                <p>All information below is provided on a best effort basis. This page or parts of the page could break at any time. If it does, attempts to fix it will be likely to made when the issue has been made aware.</p>
+                <p>Any questions/enquiries can be directed to vicvacdev@outlook.com</p>
+            </div>
             <div>Last updated: <span id="last-updated"></span></div>
             <div class="table-container">
                 <table id="content-table">
@@ -103,6 +120,14 @@ td:nth-child(1) {
             </div>
         </main>
     </body>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YDVSQQ3XYY"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-YDVSQQ3XYY');
+    </script>
     <script>
         fetch("totals.json")
             .then(r => r.json())
