--- a/index.html
+++ b/index.html
@@ -120,14 +120,7 @@ td:nth-child(1) {
             </div>
         </main>
     </body>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YDVSQQ3XYY"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-YDVSQQ3XYY');
-    </script>
+    <script async src="//static.getclicky.com/101331044.js"></script>
     <script>
         fetch("totals.json")
             .then(r => r.json())
