--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ td:nth-child(1) {
         <main>
             <div class="disclaimer">
                 <p class="disclaimer-heading">Disclaimers</p>
-                <p>Pfizer vaccine availability via https://portal.cvms.vic.gov.au/ based on age eligibility. Updated every few minutes.</p>
+                <p>Pfizer vaccine availability via https://portal.cvms.vic.gov.au/ based on age eligibility. Updated every few minutes. <strong>It is not updated in real time.</strong></p>
                 <p>This site is not associated with the Victorian Government in any way, just a guy who writes code for a living.</p>
                 <p>All information below is provided on a best effort basis. This page or parts of the page could break at any time. If it does, attempts to fix it will be likely to made when the issue has been made aware.</p>
                 <p>Any questions/enquiries can be directed to vicvacdev@outlook.com</p>
