--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@ td:nth-child(1) {
             </div>
         </main>
     </body>
+    <script async src="//static.getclicky.com/101331044.js"></script>
     <script>
         fetch("totals.json")
             .then(r => r.json())
